--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -73,7 +73,7 @@
                 {% else %}
                 <li><a href="{% url 'login' %}" 
                        class="glass-button bg-gradient-to-r from-primary to-accent text-white
-                              hover:from-primary-hover hover:to-accent">
+                              hover:from-primary-hover hover:to-accent text-white">
                     Sign In
                 </a></li>
                 {% endif %}
