--- a/src/templates/layouts/box.html
+++ b/src/templates/layouts/box.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block layout %}
-<content class="block max-w-3xl mx-auto p-4 md:p-12">
-    <div class="glass-card w-full p-8">
-        {% block content %}{% endblock %}
+<content class="block w-full min-h-screen bg-gray-50">
+    <div class="max-w-lg mx-auto md:max-w-2xl lg:max-w-3xl px-3 py-3 sm:px-4 sm:py-6 md:py-8">
+        <div class="bg-white rounded-lg sm:rounded-2xl shadow-sm border border-gray-100 overflow-hidden">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 </content>
 {% endblock %}
