--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="mt-6 pt-4 border-t border-slate-200/30 text-center text-sm text-slate-600">
-                &copy; {% now "Y" %} DuesFlow. All rights reserved.
+                &copy; {% now "Y" %} Nesttop Technologies Ltd. All rights reserved.
             </div>
         </div>
     </div>
