--- a/src/templates/includes/messages.html
+++ b/src/templates/includes/messages.html
@@ -15,9 +15,9 @@
              x-transition:leave-start="opacity-100 scale-100"
              x-transition:leave-end="opacity-0 scale-95">
             <div class="flex-1 text-lg font-medium">{{ message }}</div>
-            <button class="p-2 rounded-lg hover:bg-white/10 transition-colors" @click="showMessage = false">
-                <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+            <button class="p-2 rounded-lg opacity-75 hover:opacity-100 hover:bg-gray-700/25 active:bg-gray-800/30 transition-all duration-200" @click="showMessage = false">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
                 </svg>
             </button>
         </div>
