Add "View Departments" button to home page for improved navigation

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -58,6 +58,12 @@
                     </a>
                 </div>
             {% endif %}
+            <div class="mt-8">
+                <a href="{% url 'students:department_list' %}" 
+                   class="w-full sm:w-auto px-6 py-3 rounded-xl font-medium text-white shadow-sm bg-gradient-to-r from-blue-600 to-indigo-600 hover:from-blue-700 hover:to-indigo-700 transition-all duration-300 hover:-translate-y-0.5 text-center">
+                    View Departments
+                </a>
+            </div>
         </div>
     </div>
 </div>
